# nix-update-report

./: Cargo.toml  LICENSE  NOTES.txt  README.md  flake.nix
src/: flakes.rs  main.rs  nixpkgs.rs  packages.rs
