[package]
name = "nix-update-report"
version = "1.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["parsing", "macros"] }
